add support for embed test suite

--- a/config.yaml
+++ b/config.yaml
@@ -9,3 +9,6 @@ identities:
     aws_secret_access_key: 'xxx'
   anonymous:
     account_id: '65a011a29cdf8ec533ec3d1ccaae921c'
+aws_variables:
+  group_all_users_url: 'http://acs.amazonaws.com/groups/global/AllUsers'
+  group_authenticated_users_url: 'http://acs.amazonaws.com/groups/global/AuthenticatedUsers'
